# sing-box

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build.yml
geoip/: geoip-ad.srs  geoip-ae.srs  geoip-af.srs  geoip-ag.srs  geoip-ai.srs  geoip-al.srs  geoip-am.srs  geoip-ao.srs  geoip-aq.srs  geoip-ar.srs  geoip-as.srs  geoip-at.srs  geoip-au.srs  geoip-aw.srs  geoip-ax.srs  geoip-az.srs  geoip-ba.srs  geoip-bb.srs  geoip-bd.srs  geoip-be.srs  geoip-bf.srs  geoip-bg.srs  geoip-bh.srs  geoip-bi.srs  geoip-bj.srs  geoip-bl.srs  geoip-bm.srs  geoip-bn.srs  geoip-bo.srs  geoip-bq.srs  geoip-br.srs  geoip-bs.srs  geoip-bt.srs  geoip-bv.srs  geoip-bw.srs  geoip-by.srs  geoip-bz.srs  geoip-ca.srs  geoip-cc.srs  geoip-cd.srs  (+219 more)
geosite/: geosite-adobe-activation.srs  geosite-adobe.srs  geosite-alibaba.srs  geosite-aliyun.srs  geosite-alphabet.srs  geosite-amap.srs  geosite-antifilter-download-community.srs  geosite-apple-music.srs  geosite-apple-music@cn.srs  geosite-apple-podcasts.srs  geosite-apple-podcasts@cn.srs  geosite-apple.srs  geosite-apple@cn.srs  geosite-aux.srs  geosite-aux@!cn.srs  geosite-azure.srs  geosite-bestchange.srs  geosite-bilibili.srs  geosite-bing.srs  geosite-bytedance.srs  geosite-category-ads-all.srs  geosite-category-ads.srs  geosite-category-ads@ads.srs  geosite-category-ai-!cn.srs  geosite-category-ai-cn.srs  geosite-category-ai-ru.srs  geosite-category-anticensorship.srs  geosite-category-bank-ru.srs  geosite-category-blog-cn.srs  geosite-category-cdn-cn.srs  geosite-category-companies.srs  geosite-category-companies@cn.srs  geosite-category-cryptocurrency.srs  geosite-category-dev-cn.srs  geosite-category-dev.srs  geosite-category-documents-cn.srs  geosite-category-ecommerce-ru.srs  geosite-category-ecommerce.srs  geosite-category-education-cn.srs  geosite-category-electronic-cn.srs  (+75 more)
src/cli/: main.py
src/cli/commands/: __init__.py  converter.py  fetcher.py  generate.py
src/cli/models/: __init__.py  bpf.py  vless.py
src/cli/ui/: __init__.py  console.py
src/rule-set/: README.md
src/templates/: 1.12-community-template.json  1.13-community-template.json  1.14-community-template.json  README.md  official-client-bypass-1.json  official-client-bypass-2.json  official-client-tun-fakeip.json  official-client-tun-ipv4-ipv6.json  official-client-tun-ipv4.json
